--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 Hello, my name is <strong>Emanuel</strong>
             </h1>
             <p class="section__subtitle section__subtitle--intro">Full Stack Developer</p>
-            <img src="C:\Users\Eman1\.vscode\personalSite\img\laptopbackground.jpg" alt="a pic of me" class="intro__img">
+            <img src="C:\Users\Eman1\Desktop\deployPersonalSite\laptopbackground.jpg" alt="a pic of me" class="intro__img">
         </section>
 
 
@@ -90,7 +90,7 @@
                     and gaming.
                 </p>
             </div>
-            <img src="C:\Users\Eman1\.vscode\personalSite\img\mypic_profession.jpg" alt="Replace" class="about-me__img">
+            <img src="C:\Users\Eman1\Desktop\deployPersonalSite\mypic_profession.jpg" alt="Replace" class="about-me__img">
         </section>
 
         <!-- My related work -->
@@ -101,10 +101,10 @@
 
             <div class="portfolio">
                 <a href="C:\Users\Eman1\.vscode\personalSite\personalsite\html\portfolio-item.html" class="portfolio__item">
-                    <img src="C:\Users\Eman1\.vscode\personalSite\img\MonkeyFitness.png" height="330" width ="100%" alt="MonkeyFitness" class="portfolio__img">
+                    <img src="C:\Users\Eman1\Desktop\deployPersonalSite\MonkeyFitness.png" height="330" width ="100%" alt="MonkeyFitness" class="portfolio__img">
                 </a>
                 <a href="C:\Users\Eman1\.vscode\personalSite\personalsite\html\concert-item.html" class="portfolio__item">
-                    <img src="C:\Users\Eman1\.vscode\personalSite\img\Concert.png" height="330" width ="100%" alt="Concert" class="portfolio__img">
+                    <img src="C:\Users\Eman1\Desktop\deployPersonalSite\Concert.png" height="330" width ="100%" alt="Concert" class="portfolio__img">
                 </a>
                 <!-- <a href="a" class="portfolio__item">
                     <img src="C:\Users\Eman1\.vscode\personalSite\img\laptopbackground.jpg" alt="Replace" class="portfolio__img">
