--- a/portfolio-item.html
+++ b/portfolio-item.html
@@ -56,13 +56,13 @@
 
         <div class="row">
             <div class="column">
-              <img src="C:\Users\Eman1\Desktop\deployPersonalSite\MonkeyHome.png" alt="Homepage" style="width:100%" >
+              <img src="./img/MonkeyHome.png" alt="Homepage" style="width:100%" >
             </div>
             <div class="column">
-              <img src="C:\Users\Eman1\Desktop\deployPersonalSite\HomePageApp.png" alt="Tracker" style="width:100%">
+              <img src="./img/HomePageApp.png" alt="Tracker" style="width:100%">
             </div>
             <div class="column">
-                <img src="C:\Users\Eman1\Desktop\deployPersonalSite\MonkeyCompanion.png" alt="Companion" style="width:100%">
+                <img src="./img/MonkeyCompanion.png" alt="Companion" style="width:100%">
               </div>
           </div>
 
