--- a/concert-item.html
+++ b/concert-item.html
@@ -10,7 +10,7 @@
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css"
         integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous"/>
 
-        <link rel="stylesheet" href="C:\Users\Eman1\Desktop\deployPersonalSite\style.css">
+        <link rel="stylesheet" href="./styles/style.css">
     </head>
     <body>
         <header>
@@ -70,6 +70,6 @@
             </ul>
         </footer>
 
-        <script src="C:\Users\Eman1\Desktop\deployPersonalSite\index.js"></script>
+        <script src="./js/index.js"></script>
     </body>
 </html>
