--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
                 </a>
             </div>
         </section>
+        <!--Comment-->
 
         <!--Footer-->
         <footer class="footer">
