--- a/index.html
+++ b/index.html
@@ -100,14 +100,14 @@
         </br>
 
             <div class="portfolio">
-                <a href="C:\Users\Eman1\Desktop\deployPersonalSite\portfolio-item.html" class="portfolio__item">
+                <a href="./portfolio-item.html" class="portfolio__item">
                     <img src="./img/MonkeyFitness.png" height="330" width ="100%" alt="MonkeyFitness" class="portfolio__img">
                 </a>
-                <a href="C:\Users\Eman1\Desktop\deployPersonalSite\concert-item.html" class="portfolio__item">
+                <a href="./concert-item.html" class="portfolio__item">
                     <img src="./img/Concert.png" height="330" width ="100%" alt="Concert" class="portfolio__img">
                 </a>
-                <a href="C:\Users\Eman1\Desktop\deployPersonalSite\portfolio-item2.html" class="portfolio__item">
-                    <img src="C:\Users\Eman1\Desktop\deployPersonalSite\img\BlogPic.png" alt="Replace" class="portfolio__img">
+                <a href="./portfolio-item2.html" class="portfolio__item">
+                    <img src="./img/DemoImage.png" alt="Replace" class="portfolio__img">
                 </a>
             </div>
         </section>
