Images added to subpages

--- a/concert-item.html
+++ b/concert-item.html
@@ -36,7 +36,7 @@
                 Project: <strong> Concert</strong>
             </h1>
             <p class="section__subtitle section__subtitle--intro">Group Study/Tutoring</p>
-            <img src="C:\Users\Eman1\.vscode\personalSite\img\Concert.png" class="intro__img">
+            <img src="./img/Concert.png" class="intro__img">
         </section>
 
         <div class="portfolio-item-individual">
