--- a/portfolio-item.html
+++ b/portfolio-item.html
@@ -36,7 +36,7 @@
                 Project: <strong>Monkey Fitness</strong>
             </h1>
             <p class="section__subtitle section__subtitle--intro">Health App</p>
-            <img src="C:\Users\Eman1\.vscode\personalSite\img\MonkeyFitness.png" class="intro__img">
+            <img src="./img/MonkeyFitness.png" class="intro__img">
         </section>
 
         <div class="portfolio-item-individual">
