--- a/portfolio-item2.html
+++ b/portfolio-item2.html
@@ -35,7 +35,7 @@
                 Project: <strong>Blog Application (Android)</strong>
             </h1>
             <p class="section__subtitle section__subtitle--intro">Health App</p>
-            <img src="C:\Users\Eman1\Desktop\deployPersonalSite\img\BlogPic.png" class="intro__img">
+            <img src="./img/BlogPic.png" class="intro__img">
         </section>
 
         <div class="portfolio-item-individual">
