Fixing some grammar

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 </div> <!-- service class -->
 
                 <div class="service">
-                    <h3>Full Stack Engineering</h3>
+                    <h3>Backend Languages</h3>
                     <ul class="list-order-services">
                         <li>Java</li>
                         <li>C++</li>
