--- a/portfolio-item.html
+++ b/portfolio-item.html
@@ -48,7 +48,7 @@
             </p>
             <!-- <img src="img/portfolio-detail.jpg" alt=""> -->
             <p>My role in this project was to create the homescreen page as well as help out other members with
-                their pages when needed. As this was all of our firt time's creation of a mobile application, we all
+                their pages when needed. As this was all of our first time's creation of a mobile application, we all
                 pitched in to each other's work to make sure we were all up to speed and maintaining our waterfall model. This
                 project was done with Java using Android Studio.
             </p>
