Updated about me section

--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
                     <ul class="list-order-services">
                         <li>HTML/CSS</li>
                         <li>JavaScript</li>
-                        <li>React</li>
+                        <li>ReactJS</li>
+                        <li>AngularJS</li>
                         <li>Node.js</li>
                     </ul>
                     
@@ -67,7 +68,6 @@
                     <h3>Backend Languages</h3>
                     <ul class="list-order-services">
                         <li>Java</li>
-                        <li>C++</li>
                         <li>Python</li>
                     </ul>
                 </div> <!-- service class -->
@@ -82,12 +82,18 @@
             <p class="section__subtitle section__subtitle--about"></p>
 
             <div class="about-me__body">
-                <p>I am currently a senior at California State University, Northridge, majoring in Computer Science.
-                    My focus is on android and web development, with experience in both the front and back end of 
-                    the development. My focal languages are in Java, JavaScript (React+Node), Python, and C++. My goal after
-                    graduation is to become a software engineer who is able to take on important tasks, as well as make a
-                    positive impact for my company. My hobbies outside of programming include basketball, strength-training, 
-                    and gaming.
+                <p>
+                    I am an alumnus of California State University, Northridge, having graduated with a Bachelor's of 
+                    Science in Computer Science in December 2021. I commenced my career at Fidelity Investments in Jauary of 2022,
+                    where I currently work as an associate Software Engineer, specializing as a full-stack engineer.
+                </p>
+                <p>
+                    My primary focus lies in web application development, encompassing expertise in both front-end and 
+                    back-end development. Throughout my career, I have excelled in debugging applications, integrating 
+                    new functionalities, designing and implementing new UI pages and API development, as well as 
+                    establishing robust testing infrastructure for web applications. I am proficient in several 
+                    programming languages crucial for development, including Java, TypeScript (AngularJS + NodeJS), 
+                    Python, and SQL. 
                 </p>
             </div>
             <img src="./img/mypic_profession.jpg" alt="Replace" class="about-me__img">
