--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <div class="about-me__body">
                 <p>
                     I am an alumnus of California State University, Northridge, having graduated with a Bachelor's of 
-                    Science in Computer Science in December 2021. I commenced my career at Fidelity Investments in Jauary of 2022,
+                    Science in Computer Science in December 2021. I commenced my career at Fidelity Investments in January of 2022,
                     where I currently work as an associate Software Engineer, specializing as a full-stack engineer.
                 </p>
                 <p>
